samples/_failures_safe/1761606340_e606f5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_27fd6e87.c: In function ‘main’:
./samples/SAFE/__tmp_27fd6e87.c:151:21: error: expected declaration or statement at end of input
  151 |                     printf("Matrix multiplication failed: dimension mismatch or integer overflow.\n");
      |                     ^~~~~~
./samples/SAFE/__tmp_27fd6e87.c:151:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_27fd6e87.c:151:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_27fd6e87.c:151:21: error: expected declaration or statement at end of input
